--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link href="css/main.css" rel="stylesheet"/>
 
     <script>
-        var USE_COMPILED = true;
+        var USE_COMPILED = false;
         var require = {
             baseUrl: './js',
             paths: {
