--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
     <div id="gameCanvasDiv">
         <canvas id="gameCanvas" width="600" height="600"></canvas>
     </div>
+    <button id="startButton">Start</button>
+    <button id="stopButton">Stop</button>
 
     <script type="text/javascript">
         //Async load RequireJS
