added clear button for testing object destroy/removal

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
     </div>
     <button id="startButton">Start</button>
     <button id="stopButton">Stop</button>
+    <button id="clearButton">Clear</button>
 
     <script type="text/javascript">
         //Async load RequireJS
