--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
     <div id="gameCanvasDiv">
         <canvas id="gameCanvas" width="600" height="600"></canvas>
     </div>
-    <button id="startButton">Start</button>
+
+    <button id="stepButton">Step</button>
+    <button id="startButton">Run</button>
     <button id="stopButton">Stop</button>
     <button id="clearButton">Clear</button>
 
